<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingBottom="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="156dp"
                android:layout_height="156dp"
                app:cardCornerRadius="16dp">

            <ImageView
                android:layout_width="156dp"
                android:layout_height="156dp"
                android:padding="32dp"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_baseline_shopping_cart_24"
                android:background="@color/colorAccent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/icon" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/billing_item_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:text="@string/field_title"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/type_title"
                        android:textSize="16sp" />


                    <TextView
                        android:id="@+id/billing_item_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/field_title"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/price_title"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/billing_item_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/_00"
                        android:textSize="16sp" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/period_title"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/billing_item_subscriptionPeriod"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="4dp"
                        android:text="@string/field_title"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/billing_item_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/field_title"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/buttonSubscribe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhiteLite"
                    android:layout_margin="16dp"
                    android:background="@drawable/button_background"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:enabled="true"
                    android:text="@string/subscribe" />


                <!--                <Button-->
<!--                    android:id="@+id/button"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:textColor="@color/colorWhiteLite"-->
<!--                    android:layout_margin="16dp"-->
<!--                    android:background="@drawable/button_background"-->
<!--                    android:paddingStart="32dp"-->
<!--                    android:paddingEnd="32dp"-->
<!--                    android:text="Button" />-->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>